--- a/buổi 2/vudat2.4.html
+++ b/buổi 2/vudat2.4.html
@@ -6,11 +6,183 @@
 	<title>Document</title>
 </head>
 <body>
-	<form action="">
-		<table align="center" width="100%" cellpadding="10%">
-			<tr bgcolor="#0099FF" a></tr>
-			<tr></tr>
-		</table>
-	</form>
+	<table align="center" width="100%">
+		<tbody  style="vertical-align: top;">
+					<tr bgcolor="#0099FF">
+				<td colspan="3">
+					<font color="white">
+					<a href=""><font color="white">Giới thiệu</font></a>    |
+					<a href=""><font color="white">Tin tức</font></a>      |
+					<a href=""><font color="white">Thành viên</font></a>     |  
+					<a href=""><font color="white">Thống kê</font></a>     |  
+					<a href=""><font color="white">Thăm dò ý kiến</font></a>     |
+					<a href=""><font color="white">Tìm kiếm</font></a>     |
+					<a href=""><font color="white">Liên hệ</font></a>  
+					</font>   
+				</td>
+			</tr>
+			<tr bgcolor="#CCCCCC">
+				<td align="left" colspan="2">Thứ 5, 20/6/2021, 00:20</td>
+				<td align="right" >
+					<input type="text" placeholder="Tìm kiếm...">
+				</td>
+			</tr>
+			<tr align="left">
+				<td width="20%">
+					<table>
+							<tr bgcolor="#0033FF">
+								<td ><a href=""><font color="white">Tin tức</font></a></td>
+							</tr>
+							<tr bgcolor="#0033FF">
+								<td><a><font color="white">Sản phẩm</font></a></td>
+							</tr>
+							<tr bgcolor="#0033FF">
+								<td><a><font color="white">Đối tác</font></a></td>
+							</tr>
+							<tr bgcolor="#0033FF">
+								<td><a><font color="white">Tuyển dụng</font></a></td>
+							</tr>
+							<tr>
+								<td><img  src="../images/anh-8.png" alt="" width="100%"></td>
+							</tr>
+							<tr>
+								<td><img src="../images/anh-2.png" alt="" width="100%"></td>
+							</tr>
+					</table>
+				</td>
+
+				<td width="60%"> 
+					<table > 
+						<tr> 
+							<td rowspan="4"	width="65%"> 
+								<img width="100%" height="500px" align="left " src="D:/web font end zent/images/anh-10.jpeg" alt=""> 
+							</td> 
+							<td> <a href=""><font size="4" color="black">* Hãy trở thành đối tác của Zent</font></a>	
+							</td>
+							<td>
+								<img src="../images/anh-3.png" width="100%" alt="">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<a href=""><font size="4" color="black">* Học viên Zent làm việc tại đâu ?</font></a>
+							</td>
+							<td>
+								<img width="100%" src="../images/anh-4.png" alt="">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<a href=""><font size="4" color="black">* Tuyển dụng kỹ sư lập trình CNTT</font></a>
+							</td>
+							<td>
+								<img width="100%" src="../images/anh-5.png" alt="">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<a href=""><font size="4" color="black">* Khóa học lập trình cơ bản miễn phí</font></a>
+							</td>
+							<td>
+								<img width="100%" src="../images/anh-6.png" alt="">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<a href=""><font size="6" color="blue"><b>Học lập trình tại Zent có gì mới ?</b></font></a>
+							</td>
+							<td>
+								<a href=""><font size="4" color="black">* Hãy trở thành đối tác của Zent</font></a>
+							</td>
+							<td>
+								<img width="100%" src="../images/anh-7.png" alt="">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<a><font size="5">Phương pháp học tập hoàn toàn mới, với đội ngũ giảng viên, trợ giảng nhiệt tình mang lại nhiều kiến thức bổ ích cho học viên. Bên cạnh đó, Zent còn hỗ trợ tối đa giới thiệu việc làm cho học viên sau khi tốt nghiệp</font></a>
+							</td>
+						</tr>
+						<tr>
+							<td colspan="3">
+								<img width="100%" src="../images/anh-9.png"  alt="">
+							</td>
+						</tr>
+						<tr bgcolor="#CCCCCC">
+							<td colspan="3">
+								<b>Tin tức hợp tác</b>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<table>
+									<tr>
+								<td width="30%">
+
+									<img width="100%" src="../images/anh-4.png" alt="">
+								</td>
+								<td valign="top" align="left" width="80%">
+									<a style="" href=""><font color="blue" size="5"><b>Zent ký kết hợp tác với các công ty công nghệ</b></font></a>
+								</td>
+								
+						</tr>
+						<tr>
+							<td colspan="2"> 
+								<font size="4">Mới đây, zent tiến hành ký kết hợp tác đào tạo nhân sự công nghệ thông tinh cho các đối tác trong lĩnh vực công nghệ thông tin, nhằm thúc đẩy nhu cầu nguồn lực CNTT...</font>
+							</td>
+						</tr>
+								</table>
+							</td>
+							<td  colspan="2">
+								<table>
+									<tr>
+										<td>
+											<a href=""><font size="4" color="black">* Tuyển dụng kỹ sư lập trình CNTT</font></a>
+										</td>
+										<td>
+											<img width="100%" src="../images/anh-5.png" alt="">
+										</td>
+									</tr>
+									<tr>
+										<td>
+											<a href=""><font size="4" color="black">* Khóa học lập trình cơ bản miễn phí</font></a>
+										</td>
+										<td>
+											<img width="100%" src="../images/anh-6.png" alt="">
+										</td>
+									</tr>
+									<tr>
+										<td>
+											<a href=""><font size="4" color="black">* Hãy trở thành đối tác của Zent</font></a>
+										</td>
+										<td>
+											<img width="100%" src="../images/anh-6.png" alt="">
+										</td>
+									</tr>
+								</table>
+							</td>
+						</tr>
+							
+					</table>
+				</td>
+				<td width="20%">
+					<table>
+						<tr>
+							<td height="60px"><a href=""><font color="blue" size="6"><b>Giới thiệu Zent</b></font></a></td>
+						</tr>
+						<tr >
+							<td><a><font size="5">ZENT EDUCATION được thành lập với triết lý "Không cứ phải là thần đồng, không cứ phải là giàu có chỉ cần có phương pháp giáo đục đứng đắn, tích cực mọi đứa trẻ đều sẽ trở thành nhân tài" được viết trong cuốn sách nổi tiếng "Em đến Havard học kinh tế"</font></a></td>
+						</tr>
+						<tr>
+							<td><img  src="../images/anh-1.png" alt="" width="100%"></td>
+						</tr>
+						<tr>
+							<td><img src="../images/anh-2.png" alt="" width="100%"></td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+</tbody>
+	</table>
 </body>
 </html>
