--- a/buổi 3/vudat3.html
+++ b/buổi 3/vudat3.html
@@ -42,7 +42,7 @@
 				<tr>
 					<td colspan="2">
 						<center>
-						<table width="90%">
+						<table width="80%">
 							<tr>
 							<td colspan="2">
 								<img width="100%" src="../images/anh-1..png" alt="">
@@ -52,7 +52,7 @@
 							<td width="60%">
 								<table width="100%">
 									<tr>
-										<td width="65%" cowspan="2">
+										<td width="65%" >
 											<img width="100%" src="../images/anh-2..png" alt="">
 										</td>
 										<td width="35%" rowspan="4">
@@ -89,13 +89,13 @@
 										</td>
 									</tr>
 									<tr>
-										<td cowspan="2"><font size="6"><b>Indonesia đang trong "kịch bản tồi tệ nhất", nguy cơ thành Ấn Độ thứ hai</b></font></td>
+										<td ><font size="6"><b>Indonesia đang trong "kịch bản tồi tệ nhất", nguy cơ thành Ấn Độ thứ hai</b></font></td>
 									</tr>
 									<tr>
-										<td colspan="2" valign="bottom"><span>(Dân trí) - Indonesia thừa nhận đang ở trong "kịch bản tồi tệ nhất" khi số ca nhiễm và tử vong tăng vọt do biến thể Delta.</span></td>
+										<td valign="bottom"><span>(Dân trí) - Indonesia thừa nhận đang ở trong "kịch bản tồi tệ nhất" khi số ca nhiễm và tử vong tăng vọt do biến thể Delta.</span></td>
 									</tr>
 									<tr>
-										<td colspan="2">
+										<td >
 											<ul>
 												<li><a href=""><font color="black"><b>Gần 1.000 người chết vì Covid-19 trong ngày tại Indonesia</b></font></a></li>
 												<li><a href=""><font color="black"><b>Lý do khiến Indonesia trở thành ổ dịch lớn nhất Đông Nam Á</b></font></a></li>
@@ -104,7 +104,7 @@
 										</td>
 									</tr>
 									<tr>
-										<td>
+										<td colspan="2">
 											<table>
 											<tr>
 												<td width="33%">
@@ -148,8 +148,19 @@
 									<tr>
 										<td><img width="100%" src="../images/anh-6..png" alt=""></td>
 									</tr>
-									<tr></tr>
-									<tr></tr>	
+									<tr>
+										<td><a href=""><font color="black" size="4"><b>Phần mềm CARD dễ sử dụng</b></font></a></td>
+									</tr>
+									<tr>
+										<td>
+											<table>
+												<tr>
+													<td width="80%" align="left">ZWSOFT</td>
+													<td align="right" width="20%"><a href=""><font color="blue"><b>Mở ></b></font></a></td>
+												</tr>
+											</table>
+										</td>
+									</tr>	
 								</table>
 							</td>
 						</tr>
