--- a/buổi 4/vudat4-1.html
+++ b/buổi 4/vudat4-1.html
@@ -5,30 +5,75 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<style>
-		.vienngoai{
-			width:100%;
-			height: 20%;
-			border-top: 2px;
+		.a{
+			display: flex;
+			width:80%; 
+
+			height:150px
 		}
-		.vien{
+		.b{
 			width: 16%;
-			height: 100%
+			border:1px solid black;
+			margin: 5px;
+		}
+		.e{
+			color: #FF9900;
+			text-align: center;
+		}
+		.g{
+			color: red;
+			font-size: 20px;
+			font-weight: 900;
+			text-align: center;
+		}
+		.c{
+
+		}
+		.b:hover{
+			border: solid #FF9900;
+		}
+		.e:hover{
+			color: black;
+		}
+		.g:hover{
+			color: black;
 		}
 	</style>
 </head>
 <body>
-	<div id="vienngoai">
-		<div class="vien">
-			<img src="img-4/1.jpg" alt="">
-
+	<center>
+		<div class="a">
+			<div class="b">
+				<div align="center" class="c"><img src="img-4/1.jpg" alt=""></div>
+				<div class="e">Galaxi Tab</div>
+				<div class="g">15.000.000 VND</div>
+			</div>
+			<div class="b">
+				<div align="center" class="c"><img src="img-4/2.jpg" alt=""></div>
+				<div class="e">Galaxi Tab</div>
+				<div class="g">15.000.000 VND</div>
+			</div>
+			<div class="b">
+				<div align="center" class="c"><img src="img-4/3.jpg" alt=""></div>
+				<div class="e">Galaxi Tab</div>
+				<div class="g">15.000.000 VND</div>
+			</div>
+			<div class="b">
+				<div align="center" class="c"><img src="img-4/4.jpg" alt=""></div>
+				<div class="e">Galaxi Tab</div>
+				<div class="g">15.000.000 VND</div>
+			</div>
+			<div class="b">
+				<div align="center" class="c"><img src="img-4/5.jpg" alt=""></div>
+				<div class="e">Galaxi Tab</div>
+				<div class="g">15.000.000 VND</div>
+			</div>
+			<div class="b">
+				<div align="center" class="c"><img src="img-4/6.jpg" alt=""></div>
+				<div class="e">Galaxi Tab</div>
+				<div class="g">15.000.000 VND</div>
+			</div>
 		</div>
-		<div>
-			<img src="img-4/2.jpg" alt="">
-		</div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-	</div>
+	</center>
 </body>
 </html>
