--- a/unit7/reponsive_exercise.html
+++ b/unit7/reponsive_exercise.html
@@ -279,6 +279,11 @@
         #ip786-991{
         	display: none;
         }
+        #lap{
+        	width: 40%;
+        	margin-top: 100px;
+        	text-align:center;
+        }
 
         @media screen and (max-width: 992px){
         	.addmenu ul > li:not(:last-child){
@@ -371,7 +376,7 @@
         		width: 15%;
         	}
         }
-        @media screen and (max-width: 768px){
+            {
         	.parentCenter{
         		display: none;
         		clear: left;
@@ -764,7 +769,7 @@
 				<h3 style="color: white">About Us</h3>
 				<p  style="margin-top: 60px;color: #DDDDDD;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident et molestias quia sed saepe omnis veniam natus, magnam corporis magni maxime, nemo fuga aperiam reprehenderit. Porro nesciunt ratione provident maxime.</p>
 			</div>
-			<div id="lap" style="width: 40%;margin-top: 100px;text-align:center;">
+			<div id="lap" style="">
 				<ul>
 					<li style="list-style: none;margin-bottom: 20px;">
 						<a style="text-decoration: none;color:  #DDDDDD;" href="">About Us</a>
@@ -786,16 +791,14 @@
 			</div>
 			<div id="ip786-991" style="">
 				<ul>
-					<li style=""><a style="" href="">About Us</a></li>
-					<li style=""><a style="" href="">Travle</a></li>
-					<li style=""><a style="" href="">Advertise</a></li>
-					<li style=""><a style="" href="">Lyfestyle</a></li>
-					<li style=""><a style="" href="">Careers</a></li>
-					<li style=""><a style="" href="">Sports</a></li>
-					<li style=""><a style="" href="">Subcribe</a></li>
-					<li style="">
-						<a style="" href="">Nature</a>
-					</li>
+					<li ><a href="">About Us</a></li>
+					<li ><a  href="">Travle</a></li>
+					<li ><a  href="">Advertise</a></li>
+					<li ><a  href="">Lyfestyle</a></li>
+					<li ><a  href="">Careers</a></li>
+					<li ><a  href="">Sports</a></li>
+					<li ><a  href="">Subcribe</a></li>
+					<li ><a  href="">Nature</a></li>
 				</ul>
 			</div>
 			<div style="margin-top: 100px;width: 30%;">
