--- a/unit13/unit13.2/index.html
+++ b/unit13/unit13.2/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="index.css">
+
 </head>
 <body>
 	<div id="bgimg">
@@ -13,7 +14,7 @@
 			<div class="insert" >
 				<p>Họ và tên :</p>
 				<input id="name" onblur="addname()" class="import" type="text"  placeholder="Nhập họ tên ...">
-				<p class="error">Yêu cầu nhập đầy đủ họ tên!!!</p>
+				<p class="error ative-errol"></p>
 			</div>
 			<div class="volume">
 				<p>Giới tính :</p>
@@ -24,29 +25,29 @@
 			<div class="insert">
 				<p>Email :</p>
 				<input id="email" name="email" onblur="email()" class="import" type="email" placeholder="Nhập email ...">
-				<p class="error">Yêu cầu nhập email!!!</p>
+				<p class="error ative-errol"></p>
 			</div>
 			<div class="insert">
 				<p>Số điện thoại :</p>
 				<input id="phone" name="phone" onblur="numberphone()" class="import" type="text" placeholder="Nhập số điện thoại ...">
-				<p class="error">Yêu cầu số điện thoại!!!</p>
+				<p class="error ative-errol"></p>
 			</div>
 			<div class="insert">
 				<p>Mật khẩu :</p>
 				<input id="pass" name="pass" onblur="password()" class="import" type="password" placeholder="Password ...">
-				<p class="error">Yêu cầu nhập mật khẩu!!!</p>
+				<p class="error ative-errol"></p>
 			</div>
 			<div class="insert">
 				<p>Xác nhận mật khẩu :</p>
 				<input id="Confirmpass" name="Confirmpass" onblur="Confirmpass()" class="import" type="password" placeholder="Confirm password ...">
-				<p class="error">Yêu cầu xác nhận mât khẩu!!!</p>
+				<p class="error ative-errol"></p>
 			</div>
 		</div>
 		<div id="btn">
-			<button id="registration" class="selection">Đăng ký</button>
-			<button id="clear" class="selection">Xóa trắng</button>
+			<button  class="selection" onclick="regis()" >Đăng ký</button>
+			<button id="clear" class="selection"  >Xóa trắng</button>
 		</div>
 	</div>
 	<script type="text/javascript" src="index.js"></script>
 </body>
-</html>
+</html>	
