--- a/unit17/index.html
+++ b/unit17/index.html
@@ -198,9 +198,7 @@
 					<i class="add fas fa-plus"></i>
 					<i class="remove fas fa-minus"></i>
 				</p>
-				<div class="none animate__animated">
-					<p class="  ">Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Mollitia earum suscipit maxime quis, atque!</p>
-				</div>
+				<p class="none animate__animated ">Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Mollitia earum suscipit maxime quis, atque!</p>
 			</div>
 			<div class="question_jquery">
 				<p class="jquery">
