--- a/unit19/index.html
+++ b/unit19/index.html
@@ -17,6 +17,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   	/>
+  	
 </head>
 <body>
 	<div class="start container-fluid">
@@ -27,8 +28,8 @@
 				</div>
 				<div class="main_menu col-8 col-sm-8 col-md-9 col-lg-6 col-xl-6">
 					<div class="open_menu ">
-						<i class="fas bars animate__animated  fa-bars"></i>
-						<i class="fas time animate__animated  fa-times"></i>
+						<i class="fas bars fa-bars"></i>
+						<i class="fas time fa-times"></i>
 					</div>
 					<ul>
 						<li><a href="">Home</a></li>
@@ -84,43 +85,43 @@
 			<h4>Get Every Solution</h4>
 			<p>Don't you get what you want?</p>
 		</div>
-		<div class="start_slide">
-			<div class=" ative slide text-center">
+		<div class="start_slide text-center">
+			<div class=" slide">
 				<i class="far fa-envelope"></i>
 				<h6>Digital Marketing 1</h6>
 				<h6>$1.78 <small>- Month</small></h6>
 			</div>
-			<div class=" ative slide text-center ">
+			<div class="  slide">
 				<i class="far fa-envelope"></i>
 				<h6>Email Marketing 2</h6>
 				<h6>$6.7  <small>- Month</small></h6>
 			</div>
-			<div class=" ative slide text-center">
+			<div class="  slide">
 				<i class="far fa-envelope"></i>
 				<h6>Digital Marketing 3</h6>
 				<h6>$3.2 <small>- Month</small></h6>
 			</div>
-			<div class=" ative slide text-center ">
+			<div class="  slide">
 				<i class="far fa-envelope"></i>
 				<h6>Digital Analytics 4</h6>
 				<h6>$0.58 <small>- Month</small></h6>
 			</div>
-			<div class=" slide  text-center">
+			<div class=" slide">
 				<i class="far fa-envelope"></i>
 				<h6>Digital Marketing 5</h6>
 				<h6>$1.78 <small>- Month</small></h6>
 			</div>
-			<div class=" slide  text-center">
+			<div class=" slide ">
 				<i class="far fa-envelope"></i>
 				<h6>Digital Marketing 6</h6>
 				<h6>$1.78 <small>- Month</small></h6>
 			</div>
-			<div class=" slide  text-center">
+			<div class=" slide">
 				<i class="far fa-envelope"></i>
 				<h6>Digital Marketing 7</h6>
 				<h6>$1.78 <small>- Month</small></h6>
 			</div>
-			<div class=" slide  text-center">
+			<div class=" slide">
 				<i class="far fa-envelope"></i>
 				<h6>Digital Marketing 8</h6>
 				<h6>$1.78 <small>- Month</small></h6>
@@ -361,16 +362,18 @@
 					<h3>Our Client Says</h3>
 					<p>Here From Our Members</p>
 				</div>
-				<i class="fas fa-quote-right"></i>
-				<div class="center">
-					<h4>Brians R. Evans</h4>
-					<p> Freelance Software Engineer</p>
-				</div>
-				<hr>
-				<div class="bottom">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus mi quis viverra ornare, eros dolor interdum nulla, ut commodo dia
-					libero vitae erat. Aenean.
-					</p>
+				<div class="slide_bottom">
+					<i class="fas fa-quote-right"></i>
+					<div class="center">
+						<h4>Brians R. Evans</h4>
+						<p> Freelance Software Engineer</p>
+					</div>
+					<hr>
+					<div class="bottom">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus mi quis viverra ornare, eros dolor interdum nulla, ut commodo dia
+						libero vitae erat. Aenean.
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -380,14 +383,12 @@
 				<h2>5000+ Project all over the world</h2>
 				<p>Join the community now!</p>
 				<form method="get" accept-charset="utf-8" id="formDemo">
-					<fieldset>
 						<div>
-							<input name="email" type="Email" placeholder="Enter Email" required>
+							<input name="email" type="webfonts/mail" placeholder="Enter Email" required>
 						</div>
 						<div class="frm_btn">
 							<button type="submit">Submit <i class="fas fa-paper-plane"></i></button>
 						</div>
-					</fieldset>
 				</form>
 			</div>
 			<div class="recent_img col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
@@ -401,6 +402,46 @@
 			<img src="img/brand-logo-4.png" class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3" alt="">
 		</div>
 	</div>
+	<div class="end container-fluid">
+		<div class="container">
+			<div class="row">
+				<div class="title_end col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+					<div class="logo_end">
+						<img src="img/logo-light.png" alt="">
+					</div>
+					<div class="address">
+						<h5>Locate Us</h5>
+						<p>3964 White River Way behind Salt Lake City, UT 84106</p>
+					</div>
+					<div class="number">
+						<p>801-468-2313</p>
+						<p>591-578-1234</p>
+					</div>
+				</div>
+				<div class="list_end col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+					<div class="title_list_end">
+						<p>Others Links</p>
+					</div>
+					<ul>
+						<li>About Us</li>
+						<li>Contact Us</li>
+						<li>Pricing</li>
+						<li>Privacy Policy</li>
+						<li>Terms & Condition</li>
+					</ul>
+				</div>
+				<div class="map col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+					<div class="opacity"></div>
+					<button>View Map </button>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.6814903550744!2d105.93223425004541!3d21.0054009859423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135a8d1f8e431f7%3A0xe2d79694a3f9f528!2zMTA1IMSQxrDhu51uZyBZLCBUcsOidSBRdeG7sywgR2lhIEzDom0sIEjDoCBO4buZaSwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1630399432189!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+				</div>
+			</div>
+		</div>
+		<div class="conclude text-center">
+			<p>2021 © Stabig by Themesdesign</p>
+		</div>
+	</div>
+	
 	<script type="text/javascript" src="index.js"></script>
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -409,6 +450,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
 	<!-- Latest compiled JavaScript -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
