--- a/unit20/index.html
+++ b/unit20/index.html
@@ -21,14 +21,14 @@
 <body>
 	<div class="container-fluid">
 		<div class="contact row">
-			<div class="free contacts col-12 col-sm-12 col-md-3 col-lg-6 col-xl-6">
+			<div class="free contacts col-12 col-sm-12 col-md-3 col-lg-4 col-xl-4">
 				<h6>Free Returns and Free Shipping</h6>
 			</div>
-			<div class="phone d-flex contacts col-4 col-sm-4 col-md-3 col-lg-2 col-xl-2">
+			<div class="phone d-flex contacts col-4 col-sm-4 col-md-3 col-lg-3 col-xl-3">
 				<i class="fas fa-phone-alt"></i>
 				<h6>+00 123 456 789</h6>
 			</div>
-			<div class="email d-flex contacts col-5 col-sm-5 col-md-3 col-lg-2 col-xl-2" style="border-left: 1px solid;">
+			<div class="email d-flex contacts col-5 col-sm-5 col-md-3 col-lg-3 col-xl-3" style="border-left: 1px solid;">
 				<i class="fas fa-envelope"></i>
 				<h6>demo@exampel.com</h6>
 			</div>
@@ -40,19 +40,20 @@
 	</div>
 	<div class="firt_part container-fluid border-bottom">
 		<div class="row">
-			<div class="logo_firt  col-6 col-sm-6 col-md-3 col-lg-4 col-xl-4">
+			<div class="logo_firt  col-6 col-sm-6 col-md-3 col-lg-3 col-xl-4">
 				<img src="img/logo.png" alt="">
 			</div>
-			<div class="search col-md-6 col-lg-4 col-xl-4">
+			<div class="search col-md-6 col-lg-6 col-xl-4">
 				<form class="form-inline my-2 my-lg-0">
 				    <input class="form-control mr-sm-2" type="text" placeholder="Search">
 				    <button class="btn " type="submit"><i class="fas fa-search"></i></button>
 		    	</form>
 			</div>	
-			<div class="cart col-6 col-sm-6 col-md-3 col-lg-4 col-xl-4">
+			<div class="cart col-6 col-sm-6 col-md-3 col-lg-3 col-xl-4">
 				<i class="far fa-heart"></i>
 				<i class="fas fa-shopping-bag"></i>
 				<i class="fas bars fa-bars"></i>
+				<i class="fas times fa-times"></i>
 			</div>
 		</div>
 	</div>
